# context-engineering-dspy

./: .gitignore  README.md  level1.ipynb  pyproject.toml
level2/: async_test.py  t4_reflection.py
level2_multi_interaction/: t1_sequence.py  t1_sequential_flow.py  t3-multi_out_refine.py  t3_conditional_branch.py  t4_reflection.py
level3/: idea_gen.py  main.py
level3_evaluation/: reflection.py
level4_tools/: main.py
