[project]
name = "contextengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annoy>=1.17.3",
    "asyncio>=3.4.3",
    "dspy>=2.6.27",
    "google-genai>=1.26.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.12.0",
    "mem0ai>=0.1.114",
    "mlflow>=3.1.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "rank-bm25>=0.2.2",
    "seaborn>=0.13.2",
    "tavily-python>=0.7.10",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "twikit>=2.3.3",
]
